# cmake-project-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/Modules/: CMakePolicy.cmake  CompilerOptions.cmake  FindQt.cmake  Messages.cmake  Options.cmake  VCPKGOptions.cmake
src/: CMakeLists.txt
src/gui/: CMakeLists.txt
src/gui/res/: resources.qrc
src/gui/src/: MainWindow.cpp  MainWindow.hpp  main.cpp
src/gui/src/ui/: MainWindow.ui
